# calculatorGtest

./: CMakeLists.txt
include/: calculator.h
src/: calculator.cpp
tests/: test_calculator.cpp
